add popup event

--- a/src/sass/_typo.sass
+++ b/src/sass/_typo.sass
@@ -35,6 +35,10 @@ h1, h2, h3, h4, h5, h6
     +semi
   &--ttn
     text-transform: none
+  &--ttu
+    text-transform: uppercase
+  &--reg
+    +reg
 
 .h1, h1
 
