--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -4,6 +4,7 @@
 @import lib/swiper
 @import lib/lightgallery
 @import lib/perfect-scrollbar
+@import lib/flatpickr
 @import fonts
 @import typo
 @import common
