--- a/src/sass/partials/_btn.sass
+++ b/src/sass/partials/_btn.sass
@@ -35,7 +35,7 @@
   &--gray-dark
     color: $gray-dark
   &--full
-    min-width: 0
+    min-width: 0 !important
     width: 100%
   &--arrow
     +after
