--- a/src/templates/popup-event.html
+++ b/src/templates/popup-event.html
@@ -1,6 +1,6 @@
 ---
-title: event
-page: event
+title: popup-event
+page: popup-event
 hero: {
   bg: hero-event.jpg,
   title: <em class="yellow">Свадьба на Гидропарке</em> ,
@@ -26,6 +26,9 @@ sectionGallery: {
     мы уже провели',
   subttl: 'На нашем счету более 300 мероприятий, самые яркие моменты <br>
   которых мы показываем в нашей галерее'
+}
+popup: {
+  event: true
 }
 ---
 {% extends "layouts/_layout.html" %}
