--- a/src/sass/partials/_radio.sass
+++ b/src/sass/partials/_radio.sass
@@ -1,5 +1,6 @@
 .radio, .checkbox
   position: relative
+  font-size: $fz
   padding-left: 1.3em
   user-select: none
   display: block
@@ -39,6 +40,8 @@
     text-decoration: underline
   &--gray
     color: $gray
+  &--text
+    color: $c-text
   &--sm
     font-size: 13px
     padding-left: 1.4em
