--- a/src/templates/partials/_nav.html
+++ b/src/templates/partials/_nav.html
@@ -1,4 +1,4 @@
-{{ mixins.list(
+{# {{ mixins.list(
   name = 'nav',
   modifications = { wrap: '', item: '', link: '' },
   list = [
@@ -11,4 +11,97 @@
     { link: 'Туризм' },
     { link: 'Контакты' }
   ]
-) }}
+) }} #}
+
+<nav class="nav">
+  <ul class="">
+      <li id="menu-item-47" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-21 current_page_item menu-item-47">
+          <a href="http://kvevri.demiweb.pro/">Главная</a>
+      </li>
+      <li id="menu-item-40" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-40">
+          <a href="http://kvevri.demiweb.pro/o-restorane/">О ресторане</a>
+      </li>
+      <li id="menu-item-275" class="menu-item menu-item-type-taxonomy menu-item-object-product_cat menu-item-has-children menu-item-275">
+          <a href="http://kvevri.demiweb.pro/products/menu/" class="js-dropdown-btn">Меню</a>
+          <ul class="sub-menu js-dropdown">
+              <li id="menu-item-932" class="menu-item menu-item-type-taxonomy menu-item-object-product_cat menu-item-932">
+                  <a href="http://kvevri.demiweb.pro/products/menu/mangal-gril/">Мангал/Гриль</a>
+              </li>
+              <li id="menu-item-933" class="menu-item menu-item-type-taxonomy menu-item-object-product_cat menu-item-933">
+                  <a href="http://kvevri.demiweb.pro/products/menu/holodnye-zakuski/">Холодные закуски</a>
+              </li>
+              <li id="menu-item-940" class="menu-item menu-item-type-taxonomy menu-item-object-product_cat menu-item-940">
+                  <a href="http://kvevri.demiweb.pro/products/menu/pervye-blyuda/">Первые блюда</a>
+              </li>
+              <li id="menu-item-934" class="menu-item menu-item-type-taxonomy menu-item-object-product_cat menu-item-934">
+                  <a href="http://kvevri.demiweb.pro/products/menu/goryachie-blyuda/">Горячие блюда</a>
+              </li>
+              <li id="menu-item-936" class="menu-item menu-item-type-taxonomy menu-item-object-product_cat menu-item-936">
+                  <a href="http://kvevri.demiweb.pro/products/menu/salaty/">Салаты</a>
+              </li>
+              <li id="menu-item-935" class="menu-item menu-item-type-taxonomy menu-item-object-product_cat menu-item-935">
+                  <a href="http://kvevri.demiweb.pro/products/menu/vypechka/">Выпечка</a>
+              </li>
+              <li id="menu-item-1214" class="menu-item menu-item-type-taxonomy menu-item-object-product_cat menu-item-1214">
+                  <a href="http://kvevri.demiweb.pro/products/menu/hinkali/">Хинкали</a>
+              </li>
+              <li id="menu-item-937" class="menu-item menu-item-type-taxonomy menu-item-object-product_cat menu-item-937">
+                  <a href="http://kvevri.demiweb.pro/products/menu/deserty/">Десерты</a>
+              </li>
+              <li id="menu-item-938" class="menu-item menu-item-type-taxonomy menu-item-object-product_cat menu-item-938">
+                  <a href="http://kvevri.demiweb.pro/products/menu/sousy/">Соусы</a>
+              </li>
+              <li id="menu-item-1213" class="menu-item menu-item-type-taxonomy menu-item-object-product_cat menu-item-1213">
+                  <a href="http://kvevri.demiweb.pro/products/menu/napitki/">Напитки</a>
+              </li>
+              <li id="menu-item-1212" class="menu-item menu-item-type-taxonomy menu-item-object-product_cat menu-item-1212">
+                  <a href="http://kvevri.demiweb.pro/products/menu/alkogol/">Алкоголь</a>
+              </li>
+          </ul>
+      </li>
+      <li id="menu-item-37" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-37">
+          <a href="http://kvevri.demiweb.pro/dostavka-i-oplata/">Доставка и оплата</a>
+      </li>
+      <li id="menu-item-42" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-42">
+          <a href="http://kvevri.demiweb.pro/uslugi/" class="js-dropdown-btn">Услуги</a>
+          <ul class="sub-menu js-dropdown">
+              <li id="menu-item-1223" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1223">
+                  <a href="http://kvevri.demiweb.pro/prazdnichnye-bankety/">Праздничные банкеты</a>
+              </li>
+              <li id="menu-item-1216" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1216">
+                  <a href="http://kvevri.demiweb.pro/lavka-vkusnostej/">Лавка вкусностей</a>
+              </li>
+              <li id="menu-item-1217" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1217">
+                  <a href="http://kvevri.demiweb.pro/gastronomicheskie-tury-v-gruziyu/">Гастрономические туры в Грузию</a>
+              </li>
+              <li id="menu-item-1218" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1218">
+                  <a href="http://kvevri.demiweb.pro/degustatsiya-vin/">Дегустация вин</a>
+              </li>
+              <li id="menu-item-1219" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1219">
+                  <a href="http://kvevri.demiweb.pro/vyezdnoj-kejtering/">Выездной кейтеринг</a>
+              </li>
+              <li id="menu-item-1221" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1221">
+                  <a href="http://kvevri.demiweb.pro/master-klassy/">Мастер-классы</a>
+              </li>
+              <li id="menu-item-1220" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1220">
+                  <a href="http://kvevri.demiweb.pro/kulinarnye-timbildingi/">Кулинарные тимбилдинги</a>
+              </li>
+              <li id="menu-item-1224" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1224">
+                  <a href="http://kvevri.demiweb.pro/detskie-prazdniki/">Детские праздники</a>
+              </li>
+              <li id="menu-item-1225" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1225">
+                  <a href="http://kvevri.demiweb.pro/obslugovuvannya-zahodiv-fursheti/">Обслуживание мероприятий (фуршеты)</a>
+              </li>
+              <li id="menu-item-1222" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1222">
+                  <a href="http://kvevri.demiweb.pro/certifikaty/">Cертификаты</a>
+              </li>
+          </ul>
+      </li>
+      <li id="menu-item-48" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-48">
+          <a href="http://kvevri.demiweb.pro/sobytiya/">События</a>
+      </li>
+      <li id="menu-item-38" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-38">
+          <a href="http://kvevri.demiweb.pro/kontakty/">Контакты</a>
+      </li>
+  </ul>
+</nav>
