--- a/src/sass/partials/_hero.sass
+++ b/src/sass/partials/_hero.sass
@@ -70,9 +70,13 @@
       +flex(center, normal, column)
       padding-top: 10%
       padding-bottom: 20%
+      +rh(700)
+        padding-top: 12.5vh
       +r(1600)
         padding-left: 45px
         padding-right: 45px
+      +sm
+        padding-top: 10% !important
       +xs
         padding-left: 0
         padding-right: 0
