--- a/src/templates/partials/_nav.html
+++ b/src/templates/partials/_nav.html
@@ -21,8 +21,8 @@
       <li id="menu-item-40" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-40">
           <a href="http://kvevri.demiweb.pro/o-restorane/">О ресторане</a>
       </li>
-      <li id="menu-item-275" class="menu-item menu-item-type-taxonomy menu-item-object-product_cat menu-item-has-children menu-item-275">
-          <a href="http://kvevri.demiweb.pro/products/menu/" class="js-dropdown-btn">Меню</a>
+      <li id="menu-item-275" class="js-dropdown-btn menu-item menu-item-type-taxonomy menu-item-object-product_cat menu-item-has-children menu-item-275">
+          <a href="#" class="">Меню</a>
           <ul class="sub-menu js-dropdown">
               <li id="menu-item-932" class="menu-item menu-item-type-taxonomy menu-item-object-product_cat menu-item-932">
                   <a href="http://kvevri.demiweb.pro/products/menu/mangal-gril/">Мангал/Гриль</a>
@@ -62,8 +62,8 @@
       <li id="menu-item-37" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-37">
           <a href="http://kvevri.demiweb.pro/dostavka-i-oplata/">Доставка и оплата</a>
       </li>
-      <li id="menu-item-42" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-42">
-          <a href="http://kvevri.demiweb.pro/uslugi/" class="js-dropdown-btn">Услуги</a>
+      <li id="menu-item-42" class="js-dropdown-btn menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-42">
+          <a href="#" class="">Услуги</a>
           <ul class="sub-menu js-dropdown">
               <li id="menu-item-1223" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1223">
                   <a href="http://kvevri.demiweb.pro/prazdnichnye-bankety/">Праздничные банкеты</a>
