--- a/src/sass/partials/_section.sass
+++ b/src/sass/partials/_section.sass
@@ -183,9 +183,11 @@
     background-size: 100%
     +css-lock(10, 50, 320, 1499, padding)
   &__text
-    transform: translate(0, -50%)
+    // transform: translate(0, -50%)
+    margin-top: -1.5em
     +lg
-      transform: translate(0, 0)
+      margin-top: 0
+      // transform: translate(0, 0)
       // margin-top: -1em
     img
       display: inline-block
